# eil-cmake-utils

./: CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: ci.yml  publish-esp-component.yml
cmake/: eil_check_chip_features.cmake  eil_check_idf_features.cmake
integration_tests/default/: CMakeLists.txt
integration_tests/default/main/: CMakeLists.txt  idf_component.yml
tests/: eil_check_chip_features_test.cmake  eil_check_idf_features_test.cmake  test_helper.cmake
